# mesh-net-pet

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  kill_all_nodes.sh  readme.md
benchmark/: benchmark_average_time_per_request.sh  benchmark_throughput.sh
client/: CMakeLists.txt  Makefile
client/src/: client.c
common/: CMakeLists.txt  Makefile
common/include/: append_string.h  codes.h  connection.h  control_utils.h  crc.h  custom_logger.h  format.h  format_app.h  format_client_server.h  format_server_node.h  id.h  io.h  matrix.txt  node_names.txt  path.h  routing.h  serving.h  settings.h
common/src/: append_string.c  codes.c  connection.c  control_utils.c  crc.c  custom_logger.c  format.c  format_app.c  format_client_server.c  format_server_node.c  id.c  io.c  path.c  routing.c  serving.c
node/: CMakeLists.txt  Makefile
node/include/: format_node_node.h  node_app.h  node_essentials.h  node_handler.h  node_listener.h  node_server.h
node/src/: format_node_node.c  node.c  node_app.c  node_essentials.c  node_handler.c  node_listener.c  node_server.c
scripts/: benchmark.sh  show_mesh_node_process.sh
server/: CMakeLists.txt  Makefile
server/include/: request.h  server_essentials.h  server_handler.h  server_listener.h  server_server.h
server/src/: request.c  server.c  server_essentials.c  server_handler.c  server_listener.c  server_server.c
test/: common.sh  test_healthy_mesh.sh  test_parallel.sh  test_partially_broken.sh
